# STM32-Clion-

./: .mxproject  CMakeLists.txt  CMakePresets.json  CMake_toolchain-armclang.cmake  README.md  Temp.ioc  link.cfg
App/Hard/DISPLAY/: display.h
Core/Inc/: main.h
Core/Src/: main.c  stm32f1xx_it.c
MDK-ARM/: Temp.uvguix.ttl  Temp.uvoptx  Temp.uvprojx
MDK-ARM/Temp/: Temp.axf  Temp.build_log.htm  Temp.hex  Temp.htm  Temp.lnp  Temp.map  Temp_Temp.dep  gpio.d  main.d  stm32f1xx_hal.d  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_msp.d  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.d  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_tim.d  stm32f1xx_hal_tim_ex.d  stm32f1xx_hal_timebase_tim.d  stm32f1xx_it.d  system_stm32f1xx.d
Note/: note.txt
